--- a/client/taxi-treasure/public/index.html
+++ b/client/taxi-treasure/public/index.html
@@ -26,6 +26,12 @@
       href="https://fonts.googleapis.com/css2?family=Notable&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Foundation&family=Notable&display=swap"
+      rel="stylesheet"
+    />
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
